fix CVE: Bump&pin log4j2 to a non-vulnerable version
[#180604725]

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
         springSecurityOauth2Version = '2.5.1.RELEASE'
         springSecurityOauth2AutoconfigureVersion = '2.3.1.RELEASE'
         junitVersion = '4.13'
+        log4jVersion = '2.15.0' // this pinning can be removed when we bump to a spring boot starter version that has 2.15.0+ (due to CVE https://github.com/advisories/GHSA-jfh8-c2jp-5v3q in log4j < 2.15.0)
     }
     repositories {
         mavenCentral()
