--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.security:spring-security-web")
     implementation('org.springframework.boot:spring-boot-starter-security')
-    implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
+    implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}") {
+        exclude(module: "bcprov-jdk15on")
+    }
     implementation("org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth2Version}")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
